implement resources for endpoint \decks\{id} and update yaml file
